Add hello world

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li>Home</li>
             <li>About</li>
             <li>Contact</li>
+            <li>Help</li>
         </ul>
     </nav>
     <div class="container">
