--- a/index.html
+++ b/index.html
@@ -1,62 +1,55 @@
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PassX - Your Personal Password Manager</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PassX - Your Personal Password Manager</title>
+
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <nav>
-        <div class="logo">PassX</div>
-        <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Contact</li>
-            
-        </ul>
-    </nav>
-    <div class="container">
-        <h1>Password Manager</h1>
-        <p>Secure. Simple. Smart.
-            <br>
-            PassX is the easiest way to manage and protect your passwords. 🔑</p>
-        <h2>Your Passwords <span id="alert">(Copied!)</span></h2> 
-        <table>
-            <tr>
-                <th>Website</th>
-                <th>Username</th>
-                <th>Password</th>
-                <th>Delete</th>
-            </tr> 
- 
-        </table>
+  <nav>
+    <div class="logo">PassX</div>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Contact</li>
+    </ul>
+  </nav>
 
-        <h2>Add a Password</h2>
-        <form action="/submit" method="post">
+  <div class="container">
+    <h1>Password Manager</h1>
+    <p>Secure. Simple. Smart.<br>PassX is the easiest way to manage and protect your passwords. 🔑</p>
+    
+    <h2>Your Passwords <span id="alert">(Copied!)</span></h2> 
+    <table>
+      <tr>
+        <th>Website</th>
+        <th>Username</th>
+        <th>Password</th>
+        <th>Delete</th>
+      </tr> 
+    </table>
 
-            <!-- Text input for website -->
-            <label for="website">Website:</label>
-            <input type="text" id="website" name="website" required>
-            <br><br>
+    <h2>Add a Password</h2>
+    <form action="/submit" method="post">
+      <label for="website">Website:</label>
+      <input type="text" id="website" name="website" required><br><br>
 
-            <!-- Text input for username -->
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-            <br><br>
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" required><br><br>
 
-            <!-- Password input -->
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-            <br>
-            <!-- Submit button -->
-            <button class="btn" type="submit">Submit</button>
-        </form>
-    </div>
-    <script src="script.js"></script>
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required><br>
+
+      <button class="btn" type="submit">Submit</button>
+    </form>
+  </div>
+
+  <script src="script.js"></script>
 </body>
-
 </html>
